cloud-ops/kubernetes/common/VirtualService/virtual-service-no-subdomain-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: OBJECT_BASE_NAME-vservice
  namespace: HOST_NAMESPACE
spec:
  hosts:
  - DOMAIN_NAME
  gateways:
  - istio-system/OBJECT_BASE_NAME-gateway
  http:
  - match:
    route:
    - destination:
        host: HOST_NAME
        port:
          number: HOST_PORT
