cloud-ops/kubernetes/common/VirtualService/virtual-service-to-harbor-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sandboxregistry-ddns-vservice
spec:
  gateways:
  - istio-system/sandboxregistry-ddns-gateway
  hosts:
  - sandboxregistry.ddns.net
  http:
  - match:
    - uri:
      prefix: "/api/"
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/service/"
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/v2/"
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/chartrepo/"
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - match:
    - uri:
      prefix: "/c/"
    route:
    - destination:
        host: harbor-harbor-core
        port:
          number: 80
  - route:
    - destination:
        host: harbor-harbor-portal
        port:
          number: 80
