cloud-ops/kubernetes/common/VirtualService/virtual-service-to-k8s-ingress-gateway-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: OBJECT_BASE_NAME-k8s-vservice
  namespace: HOST_NAMESPACE
spec:
  hosts:
  - DOMAIN_NAME
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  http:
  - match:
    route:
    - destination:
        host: HOST_NAME
        port:
          number: HOST_PORT
